--- a/src/components/TransactionModal/style.module.css
+++ b/src/components/TransactionModal/style.module.css
@@ -1,7 +1,3 @@
-p {
-  margin: 0;
-}
-
 .modal {
   position: fixed;
   bottom: 0;
