--- a/src/views/Login/style.module.css
+++ b/src/views/Login/style.module.css
@@ -2,10 +2,6 @@
   background: var(--gray);
 }
 
-p {
-  margin-top: 0.5em;
-}
-
 .spacer {
   margin-top: 1em;
 }
