--- a/src/views/Register/style.module.css
+++ b/src/views/Register/style.module.css
@@ -86,3 +86,10 @@
     margin-bottom: 0.5em;
   }
 }
+
+.spacer {
+}
+
+.spacer1 {
+  margin-top: 0.1em;
+}
